# RedWolf

./: .gitignore  Cargo.toml
documents/: about.md  index.html  pp.md  test.html  test_document.html  tos.md
documents/articles/life/: 1.md  articletest.html  index.html  pf.md
fragments/: article.html  favicon.html  font.html  footer.html  fp_magazine_list.handlebars  fp_magazine_list.html  generic_article.html  header.html  list_articles.html  list_magazines.html  magazine_list.html  nav.html  style_background.css  test_dir_list.html
magazines/: magazine.handlebars  options.toml
magazines/research/: article.handlebars  meta.toml  toc.handlebars
magazines/research/articles/: test.md
settings/: nginx.conf
src/: main.rs
src/redwolf/: errors.rs  mod.rs  options.rs  routes.rs  url.rs  utility.rs
src/redwolf/document/: mod.rs  model.rs  processor.rs  renderer.rs
src/redwolf/fdo/: fdo_object.rs  mod.rs
src/redwolf/magazine/: mod.rs  model.rs  renderer.rs
templates/html/: article.html  index.html  magazine.html
templates/html/img/: logo.css
templates/html/includes/: footer.html  header.html  opengraph.html
templates/html/style/: base.css
