[package]
name = "redwolf"
version = "0.1.0"
authors = ["ne0ndrag0n <ne0ndrag0n@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="^1.0"
bincode = "^1.0"
toml = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
serde_urlencoded = "^0.5"
serde_json = "^1.0"
comrak = "^0.6"
handlebars = "^2.0"
chrono = { version = "^0.4", features = ["serde"] }
uuid = { version = "^0.7", features = ["v4"] }
lazy_static = "^1.3"
env_logger = "^0.6"
log = "^0.4"
failure = "^0.1"
regex = "1"
walkdir = "2"